--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 	<div id="container">
-		<h1>Hello there!</h1>
 		<div id="inner">
-			
+			<h1>Hello there!</h1>	
+			Looking for the Game of Shells? <a href="http://aagache.github.io/shells">click here</a>
 		</div>
 	</div>
 </body>
