other small changes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				
 				<div class="content">
 					<img src="img/e_2weather.PNG" class="image" alt="WeatherIn plugin"/>
-					<p class="desc">WeatherIn is a jQuery plugin that shows weather temperature and humidity in a mentioned city. The plugin is chainable and allows options for city and refresh period.</p>
+					<p class="desc">WeatherIn is a jQuery plugin that shows weather temperature and humidity in a mentioned city. The plugin is chainable and allows chosing the city and the refresh period.</p>
 				</div>
 				
 				<a class="button" href="http://aagache.github.io/weather"> > Demo </a>
