--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</div>
 
 				<div class="content">
-					<img src="img/checklist.jpg" class="image" alt="checklist"/>
+					<img src="img/checklist.JPG" class="image" alt="checklist"/>
 					<p class="desc">A very simple checklist template. Just check the items on the list and they will get blue-striked. Also, while checking the items, a blue bar at the bottm records the overall progress.</p>
 				</div>
 				
