--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 				
 				<div class="content">
 					<img src="img/e_2weather.PNG" class="image" alt="WeatherIn plugin"/>
-					<p class="desc">WeatherIn is a jQuery plugin that shows weather temperature and humidity in a mentioned city. Not working here at the moment because of cross-origin ajax request (but working localy).</p>
+					<p class="desc">WeatherIn is a jQuery plugin that shows weather temperature and humidity in a mentioned city. <span color="#ccc">Currently unavailable.</span></p>
 				</div>
 				
-				<a class="button" href="http://aagache.github.io/weather"> > Demo </a>
+				<a class="button disabled" href="#"> > Demo </a>
 			</div>
 
 		</div>
